--- a/src/app/profiles/profile-detail/profile-detail.component.html
+++ b/src/app/profiles/profile-detail/profile-detail.component.html
@@ -1,1 +1,21 @@
-<p>profile-detail works!</p>
+<h2 i18n>Profile Detail</h2>
+<table mat-table [dataSource]="profileDetails" class="mat-elevation-z8">
+    
+    <!-- Keys Column-->
+    <ng-container matColumnDef="key">
+        <td mat-cell *matCellDef="let row" >{{row.key}}</td>
+    </ng-container>
+
+    <!-- Values Column-->
+    <ng-container matColumnDef="value">
+        <td mat-cell *matCellDef="let row">{{row.value}}</td>
+    </ng-container>
+
+    <!-- Edit Column-->
+    <ng-container matColumnDef="edit">
+        <td mat-cell *matCellDef="let row" ><mat-icon>edit</mat-icon></td>
+    </ng-container>
+
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+</table>
