--- a/src/app/profiles/profiles.component.scss
+++ b/src/app/profiles/profiles.component.scss
@@ -1,14 +1,4 @@
-.sidenav-container {
-  height: 100%;
-}
-
-.sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
-}
+$toolbar-box-height: 56px;
 
 .mat-toolbar.mat-primary {
   position: sticky;
@@ -16,6 +6,56 @@
   z-index: 1;
 }
 
-table {
-  width: 100%;
+.mat-toolbar-row {
+  height: 108px;
+
+  .mat-h1 {
+    font-size: 2em;
+    margin-left: 10px;
+    font-weight: 400;
+  }
+
+  button.mat-raised-button.mat-button-base {
+    height: $toolbar-box-height;
+    border-radius: 2px;
+  }
 }
+
+.mat-icon {
+  margin: 0 15px;
+}
+
+.search-field {
+  background-color: white;
+  height: $toolbar-box-height;
+  box-sizing: border-box;
+  margin: 10px;
+  color: gray;
+  display: flex;
+  align-items: center;
+  flex-basis: 80%;
+
+  input {
+    flex-basis: 100%;
+    font-size: medium;
+  }
+}
+ 
+.table-container {
+  margin: 25px;
+
+  table {
+    width: 100%;
+    
+    .mat-header-cell {
+      font-weight: bold;
+    }
+
+    .mat-header-cell, .mat-cell {
+      &:last-of-type {
+        text-align: right;
+      }
+    }
+  }
+}
+
