--- a/src/app/profiles/profile-detail/profile-detail.component.html
+++ b/src/app/profiles/profile-detail/profile-detail.component.html
@@ -1,21 +1,108 @@
-<h2 i18n>Profile Detail</h2>
-<table mat-table [dataSource]="profileDetails" class="mat-elevation-z8">
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>Profile:</span>
+      <img [src]="profile.photo">
+      <span>{{profile.first_name}} {{profile.last_name}}</span>
+    </mat-toolbar-row>
+</mat-toolbar>
+<section class="body-container">
+   <div class="side-content">
+       <div class="blue-header"></div>
+       <div class="custom-card-container">
+            <div class="custom-card mat-elevation-z8">
+                <h3 class="mat-h2">Quick Facts</h3>
+                <app-custom-card-section title="Status">
+                    <mat-icon class="status-tier--gold">portrait</mat-icon>
+                    <div class="status-info">
+                        <span>ID: {{quickFacts.id}}</span>
+                        <span>Tier: {{quickFacts.tier}}</span>
+                        <span>PTS: {{quickFacts.points}}</span>
+                    </div>
+                </app-custom-card-section>
+                <app-custom-card-section title="Top 3 Facts">
+                    <mat-icon>error</mat-icon>
+                    <div class="status-info">
+                        <span>{{quickFacts.room_type}}</span>
+                        <span>{{quickFacts.bed_type}}</span>
+                        <span>{{quickFacts.floor}}</span>
+                    </div>
+                </app-custom-card-section>
+                <app-custom-card-section title="RFM Score">
+                    <div class="rfm-section">
+                        <circle-progress [percent]="quickFacts.rfm_score.score"></circle-progress>
+                        <span>R: {{quickFacts.rfm_score.r}}</span>
+                        <span>F: {{quickFacts.rfm_score.f}}</span>
+                        <span>M: {{quickFacts.rfm_score.m}}</span>
+                    </div>
+                </app-custom-card-section>
+                <app-custom-card-section title="Other Facts">
+                    <table>
+                        <tr>
+                            <td><mat-icon>date_range</mat-icon></td>
+                            <td>Total Stays:</td>
+                            <td><strong>{{quickFacts.total_stays}}</strong> </td>
+                        </tr>
+                        <tr>
+                            <td><mat-icon>moon</mat-icon></td>
+                            <td>Nights:</td>
+                            <td><strong>{{quickFacts.nights}}</strong></td>
+                        </tr>
+                        <tr>
+                            <td><mat-icon>hotel_bed</mat-icon></td>
+                            <td>Avg. Stay:</td>
+                            <td><strong>{{quickFacts.average_stay}}</strong></td>
+                        </tr>
+                        <tr>
+                            <td><mat-icon>checkout</mat-icon></td>
+                            <td>Last Visit:</td>
+                            <td><strong><strong>{{quickFacts.last_visit}}</strong></strong></td>
+                        </tr>
+                        <tr>
+                            <td><mat-icon>money</mat-icon></td>
+                            <td>Lifetime Value:</td>
+                            <td><strong>{{quickFacts.lifetime_value}}</strong></td>
+                        </tr>
+                    </table>
+                </app-custom-card-section>
+            </div>
+        </div>
+   </div>
+   <div class="main-content">
+    <mat-tab-group backgroundColor="primary">
+        <mat-tab label="Profile Detail">
+            <div class="flex-container">
+                <mat-card class="mat-elevation-z8">
+                    <mat-card-content>
+                        <h2 class="mat-h2">Profile Detail</h2>
+                        <table mat-table [dataSource]="profileDetails" class="mat-elevation-z8">
+            
+                            <!-- Keys Column-->
+                            <ng-container matColumnDef="key">
+                                <td mat-cell *matCellDef="let row" >{{row.key}}</td>
+                            </ng-container>
+                        
+                            <!-- Values Column-->
+                            <ng-container matColumnDef="value">
+                                <td mat-cell *matCellDef="let row">{{row.value || '-'}}</td>
+                            </ng-container>
+                        
+                            <!-- Edit Column-->
+                            <ng-container matColumnDef="edit">
+                                <td mat-cell *matCellDef="let row" ><mat-icon>edit</mat-icon></td>
+                            </ng-container>
+                        
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                        
+                        </table>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </mat-tab>
+        <mat-tab label="Profile ID's"> Content 2 </mat-tab>
+        <mat-tab label="Activity Timeline"> Content 3 </mat-tab>
+      </mat-tab-group>
     
-    <!-- Keys Column-->
-    <ng-container matColumnDef="key">
-        <td mat-cell *matCellDef="let row" >{{row.key}}</td>
-    </ng-container>
+   </div>
+</section>
 
-    <!-- Values Column-->
-    <ng-container matColumnDef="value">
-        <td mat-cell *matCellDef="let row">{{row.value}}</td>
-    </ng-container>
 
-    <!-- Edit Column-->
-    <ng-container matColumnDef="edit">
-        <td mat-cell *matCellDef="let row" ><mat-icon>edit</mat-icon></td>
-    </ng-container>
-
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-</table>
