--- a/src/app/profiles/profile-detail/profile-detail.component.html
+++ b/src/app/profiles/profile-detail/profile-detail.component.html
@@ -98,8 +98,8 @@
                 </mat-card>
             </div>
         </mat-tab>
-        <mat-tab label="Profile ID's"> Content 2 </mat-tab>
-        <mat-tab label="Activity Timeline"> Content 3 </mat-tab>
+        <mat-tab label="Profile ID's"> there's nothing here ¯\_(ツ)_/¯  </mat-tab>
+        <mat-tab label="Activity Timeline"> there's nothing here either ¯\_(ツ)_/¯  </mat-tab>
       </mat-tab-group>
     
    </div>
